# hello-world

./: .gitignore  1.c  CMakeLists.txt  README.md  demo.c  hello  hello.c  hello_world.c  main  main.c
source/: CMakeLists.txt  hello_world.c  hello_world.h
